fixed graph alignment

--- a/UI/src/app/component/cumulative-line-chart/cumulative-line-chart.component.css
+++ b/UI/src/app/component/cumulative-line-chart/cumulative-line-chart.component.css
@@ -19,7 +19,7 @@
 #chart{
     position: relative;
     overflow-x: auto;
-    width: 100%;
+    width: auto;
 }
 
 .tooltip-container{
